...
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="33dp"
                        android:layout_marginRight="33dp"
                        android:background="@drawable/profile_border"
                        android:hint="Email Address"
...
